--- a/css/goujiuwang.css
+++ b/css/goujiuwang.css
@@ -11,6 +11,7 @@ html {
 #goujiuwang {
   width: 100%;
   height: 100%;
+  margin-bottom: 400px;
 }
 
 .haeder-top {
@@ -287,15 +288,17 @@ html {
 }
 
 .list .list-u1 .list-nv ul {
+  width: 185px;
   background: #CC0210;
-  height: 495px;
+  height: 450px;
   position: absolute;
   top: 45px;
   left: 0;
 }
 
 .list .list-u1 .list-nv ul li {
-  height: 49px;
+  width: 185px;
+  height: 45px;
   position: relative;
 }
 
@@ -317,7 +320,6 @@ html {
 }
 
 .lbt {
-  margin-bottom: 100px;
   height: 450px;
   width: 100%;
   position: relative;
@@ -335,6 +337,7 @@ html {
 
 .lbt .left a img {
   width: 100%;
+  height: 450px;
 }
 
 .lbt .left .a1 {
@@ -372,7 +375,7 @@ html {
 .lbt .left ul {
   position: absolute;
   left: 551px;
-  top: 465px;
+  top: 415px;
 }
 
 .lbt .left ul li {
@@ -397,7 +400,7 @@ html {
 
 .lbt .right {
   position: absolute;
-  top: 43px;
+  top: 14px;
   left: 1025px;
 }
 
@@ -416,97 +419,102 @@ html {
   background: white;
 }
 
-.lbt .lbt-list .left {
+.lbt .lbt-list .lbt-list-left {
   height: 100%;
-  width: 47%;
+  width: 55%;
   float: left;
   padding-left: 3%;
 }
 
-.lbt .lbt-list .left .d3 {
+.lbt .lbt-list .lbt-list-left .d3 {
   width: 50%;
   float: left;
   margin-right: 10%;
 }
 
-.lbt .lbt-list .left .d4 {
+.lbt .lbt-list .lbt-list-left .d4 {
   width: 40%;
   float: left;
 }
 
-.lbt .lbt-list .left dl {
+.lbt .lbt-list .lbt-list-left dl {
   overflow: hidden;
   margin-bottom: 30px;
 }
 
-.lbt .lbt-list .left dl dt {
+.lbt .lbt-list .lbt-list-left dl dt {
   margin-top: 25px;
   padding-bottom: 15px;
   border-bottom: 1px solid #ccc;
 }
 
-.lbt .lbt-list .left dl dd {
+.lbt .lbt-list .lbt-list-left dl dd {
   text-align: center;
   float: left;
   margin-top: 10px;
   padding: 0 10px;
-  border-left: 1px solid #ccc;
   font-size: 14px;
   line-height: 14px;
+  border-right: 1px solid #ccc;
 }
 
-.lbt .lbt-list .left dl dd .c1 {
+.lbt .lbt-list .lbt-list-left dl dd .c1 {
   color: red;
 }
 
-.lbt .lbt-list .left dl dd .c2 {
+.lbt .lbt-list .lbt-list-left dl dd .c2 {
   color: #F97B00 !important;
 }
 
-.lbt .lbt-list .left dl dd .c3 {
+.lbt .lbt-list .lbt-list-left dl dd .c3 {
   color: #AD5702 !important;
 }
 
-.lbt .lbt-list .left dl dd .c4 {
+.lbt .lbt-list .lbt-list-left dl dd .c4 {
   color: #000;
 }
 
-.lbt .lbt-list .left dl .d1 {
+.lbt .lbt-list .lbt-list-left dl .d4 {
   border-left: none;
 }
 
-.lbt .lbt-list .right {
-  margin-left: 10%;
+.lbt .lbt-list .lbt-list-right {
+  margin-left: 18%;
   float: left;
   height: 100%;
   width: 264px;
   background: #ccc;
 }
 
-.lbt .lbt-list .right ul {
+.lbt .lbt-list .lbt-list-right ul {
+  margin-top: 10px;
   margin-left: 10px;
   margin-right: 10px;
   width: 244px;
   height: 53%;
 }
 
-.lbt .lbt-list .right ul li {
+.lbt .lbt-list .lbt-list-right ul li {
   width: 80px;
   height: 80px;
   float: left;
 }
 
-.lbt .lbt-list .right ul li a img {
+.lbt .lbt-list .lbt-list-right ul li a img {
   width: 80PX;
   height: 80px;
   border: 1px solid #ccc;
 }
 
-.lbt .lbt-list .right .r1 {
+.lbt .lbt-list .lbt-list-right .r1 {
   margin-left: 10px;
   margin-right: 10px;
 }
 
-.lbt .lbt-list .right .r1 img {
+.lbt .lbt-list .lbt-list-right .r1 img {
   width: 240px;
+}
+
+.lbt .lbt1 {
+  display: block;
 }
