首页商品列表数据完成

--- a/css/goujiuwang.css
+++ b/css/goujiuwang.css
@@ -342,7 +342,6 @@ html {
 
 .lbt .left .a1 {
   display: block;
-  background: red;
 }
 
 .lbt .left .kh1 {
@@ -518,4 +517,24 @@ html {
 
 .lbt .lbt1 {
   display: block;
+}
+
+.list-1 {
+  height: 50px;
+  margin: 0 auto;
+  line-height: 50px;
+  color: #9B9B9B;
+  width: 100%;
+  font-size: 16px;
+  border-bottom: 1px solid #ccc;
+}
+
+.list-1 li {
+  float: left;
+  margin-left: 35px;
+}
+
+.list-1 .list-1-4 {
+  float: right;
+  margin-right: 35px;
 }
